--- a/OxyPlotExample2/OxyPlotExample2.csproj
+++ b/OxyPlotExample2/OxyPlotExample2.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3A5B740D-7D6C-4EE2-8137-B783C24A3431}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>OxyPlotExample2</RootNamespace>
     <AssemblyName>OxyPlotExample2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
